--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,6 @@ deploy:
     bucket_path: "docker-react"
     on:
         branch: main
+    access_key_id: $AWS_ACCESS_KEY_ID
+    Secret_access_key:
+        secure: "$AWS_SECRET_KEY_ID"
